# twitch-to-speech

./: .gitignore  Cargo.toml  Dockerfile  README.md
flite/: -  Cargo.toml
flite-sys/: Cargo.toml  build.rs
flite-sys/src/: lib.rs
flite/flite-sys/: Cargo.toml  build.rs
flite/flite-sys/src/: bindgen.rs
flite/src/: lib.rs
src/: main.rs
